--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,6 +8,7 @@
             <file>./Tests/Helper/RequestHelperTest.php</file>
             <file>./Tests/Helper/JsonHelperTest.php</file>
             <file>./Tests/Helper/LogHelperTest.php</file>
+            <file>./Tests/Helper/SqlHelperTest.php</file>
         </testsuite>
     </testsuites>
 
